--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
   <!-- Script for Auth & Backend Connection -->
   <script>
-    const BACKEND_URL = "http://localhost:4000";
+    const BACKEND_URL = "https://whis-backend.onrender.com";
     // =====================================================
     // TODO: PASTE YOUR CLIENT ID HERE
     // =====================================================
