Update API base URL to production

--- a/payment.html
+++ b/payment.html
@@ -61,7 +61,7 @@
   </main>
 
   <script>
-    const API_BASE = "http://localhost:4000"; 
+    const API_BASE = "https://whis-backend.onrender.com"; 
     const cashfree = Cashfree({ mode: "sandbox" });
 
     const paymentCard = document.getElementById('paymentCard');
