--- a/index.html
+++ b/index.html
@@ -240,11 +240,14 @@
 
   <!-- Script for Auth & Backend Connection -->
   <script>
+    // >>>>> IMPORTANT: CHANGE THIS TO YOUR LIVE RENDER BACKEND URL <<<<<
+    // Example: "https://whis-backend.onrender.com"
     const BACKEND_URL = "https://whis-backend.onrender.com";
+    
     // =====================================================
     // TODO: PASTE YOUR CLIENT ID HERE
     // =====================================================
-    const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
+    const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com";
 
     const loginModal = document.getElementById('loginModal');
     const signInBtn = document.getElementById('signInBtn');
@@ -274,7 +277,7 @@
         });
         google.accounts.id.renderButton(
           document.getElementById("googleBtnContainer"),
-          { theme: "outline", size: "large", width: "250" } // Customization attributes
+          { theme: "outline", size: "large", width: "250" } 
         );
       } else {
         console.error("Google Library not loaded");
@@ -288,14 +291,14 @@
 
     // 3. Handle the Google Response (The Real Login)
     async function handleGoogleResponse(response) {
-      console.log("Encoded JWT ID token: " + response.credential);
+      console.log("Google ID Token received. Sending to backend...");
 
       // Send this token to your backend to verify & save user
       try {
         const res = await fetch(`${BACKEND_URL}/api/auth/google`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ token: response.credential }) // Sending the JWT
+          body: JSON.stringify({ token: response.credential }) 
         });
 
         if (res.ok) {
@@ -307,11 +310,11 @@
           }
         } else {
           console.error("Backend failed to verify token");
-          alert("Login failed. Check console.");
+          alert("Login failed. Check console for details.");
         }
       } catch (e) {
-        console.error(e);
-        alert("Server connection error.");
+        console.error("Server connection error:", e);
+        alert("Cannot connect to server. Ensure BACKEND_URL is correct.");
       }
     }
 
@@ -347,6 +350,8 @@
         }
       } catch(e) {
         console.log("Backend not reachable yet");
+        connectionStatus.innerHTML = '<span class="w-2 h-2 rounded-full bg-red-500"></span> Offline';
+        connectionStatus.classList.remove('opacity-0');
       }
     }
   </script>
