Update Google Client ID in index.html

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     // =====================================================
     // TODO: PASTE YOUR CLIENT ID HERE
     // =====================================================
-    const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com";
+    const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
 
     const loginModal = document.getElementById('loginModal');
     const signInBtn = document.getElementById('signInBtn');
