--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <h2 class="text-2xl font-bold mb-2">Download whis.ai</h2>
       <p class="text-slate-500 mb-8 text-sm">Choose your platform to start your free trial.</p>
       <div class="space-y-3">
-        <a href="YOUR_DMG_LINK_HERE" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-apple text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
@@ -228,7 +228,7 @@
           </div>
           <i class="fa-solid fa-arrow-down text-slate-400 group-hover:text-whis-blue"></i>
         </a>
-        <a href="YOUR_EXE_LINK_HERE" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-windows text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
@@ -245,7 +245,7 @@
   <!-- Scripts -->
   <script>
     const BACKEND_URL = "https://whis-backend.onrender.com";
-    const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com";
+    const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
 
     const loginModal = document.getElementById('loginModal');
     const downloadModal = document.getElementById('downloadModal');
