--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>whis.ai – #1 AI assistant for meetings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -19,27 +18,21 @@
       }
     }
   </script>
-  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   
-  <!-- 1. LOAD GOOGLE LIBRARY -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body class="bg-whis-bg text-slate-900 antialiased">
 
-  <!-- HERO + NAV WRAPPED INSIDE GRADIENT SECTION -->
   <section class="relative bg-gradient-to-b from-sky-500 via-sky-400 to-orange-200 text-white pb-40 overflow-hidden">
 
-    <!-- soft sun / mountain blobs -->
     <div class="pointer-events-none absolute inset-0 opacity-60">
       <div class="absolute -bottom-24 left-1/2 -translate-x-1/2 w-[120%] h-64 bg-gradient-to-tr from-orange-300 via-orange-200 to-yellow-100 rounded-[40%] blur-3xl"></div>
       <div class="absolute bottom-4 left-10 w-32 h-16 bg-white/30 rounded-full blur-xl"></div>
       <div class="absolute bottom-10 right-10 w-20 h-20 bg-white/40 rounded-full blur-lg"></div>
     </div>
 
-    <!-- NAVBAR -->
     <nav class="relative z-10 w-full flex items-center justify-between px-6 md:px-12 py-4">
-      <!-- Logo -->
       <a href="index.html" class="flex items-center gap-2">
         <div class="w-9 h-9 rounded-2xl bg-slate-900 flex items-center justify-center shadow-lg shadow-slate-900/40">
           <div class="w-7 h-7 rounded-xl bg-gradient-to-tr from-whis-blue to-sky-300 flex items-center justify-center border border-sky-200/60">
@@ -53,11 +46,10 @@
         <a href="pricing.html" class="hover:text-white">Pricing</a>
         <a href="enterprise.html" class="hover:text-white">Enterprise</a>
         <a href="careers.html" class="hover:text-white">Careers</a>
-        <a href="blog.html" class="hover:text-white">Blog</a>
+        <a href="contact.html" class="hover:text-white">Contact Us</a>
       </div>
 
       <div class="flex items-center gap-4">
-        <!-- User Profile / Sign In -->
         <div id="userSection" class="hidden md:flex items-center gap-3">
           <button onclick="openLoginModal()" id="signInBtn" class="text-sm font-medium text-white hover:text-sky-100 transition">
             Sign in
@@ -69,13 +61,12 @@
           </div>
         </div>
 
-        <a href="#contact-sales" class="bg-white/10 border border-white/30 text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow-lg shadow-sky-900/30 hover:bg-white/20 transition">
+        <a href="contact.html" class="bg-white/10 border border-white/30 text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow-lg shadow-sky-900/30 hover:bg-white/20 transition">
           Talk to sales
         </a>
       </div>
     </nav>
 
-    <!-- HERO CONTENT -->
     <div class="relative z-10 max-w-4xl mx-auto mt-12 md:mt-16 px-6 text-center">
       <h1 class="text-4xl md:text-6xl font-semibold leading-tight drop-shadow-sm">
         #1 AI assistant
@@ -90,12 +81,10 @@
       </p>
 
       <div class="mt-8 flex flex-col items-center gap-3">
-        <!-- GET APP BUTTON (Opens Modal) -->
         <button onclick="openDownloadModal()" class="bg-whis-blue px-6 py-2.5 rounded-2xl text-white font-semibold text-sm md:text-base shadow-xl shadow-blue-900/40 hover:bg-blue-700 transition">
           Get App
         </button>
         
-        <!-- Connection Status Indicator -->
         <div id="connectionStatus" class="text-xs text-sky-200/80 flex items-center gap-1.5 opacity-0 transition-opacity">
           <span class="w-2 h-2 rounded-full bg-emerald-400 animate-pulse"></span>
           Backend Connected
@@ -103,10 +92,8 @@
       </div>
     </div>
 
-    <!-- APP WINDOW (Video Placeholder) -->
     <div class="relative z-10 max-w-5xl mx-auto mt-16 px-6">
       <div class="relative rounded-[32px] bg-gradient-to-tr from-orange-400 via-orange-300 to-purple-400 shadow-[0_30px_80px_rgba(15,23,42,0.55)] overflow-hidden border border-white/20">
-        <!-- top bar -->
         <div class="flex items-center justify-between px-4 py-3 text-white/80 text-xs">
           <div class="flex items-center gap-2">
             <span class="inline-flex w-2.5 h-2.5 rounded-full bg-red-400"></span>
@@ -120,7 +107,6 @@
           </div>
         </div>
 
-        <!-- VIDEO STREAM AREA -->
         <div class="relative h-52 md:h-72 bg-black/60 overflow-hidden">
           <video
             class="w-full h-full object-cover opacity-80"
@@ -134,7 +120,6 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/10 to-transparent"></div>
         </div>
 
-        <!-- floating whis.ai bubble -->
         <div class="relative">
           <div
             class="absolute -top-6 left-1/2 -translate-x-1/2 bg-blue-700 text-white text-sm md:text-base px-5 py-2 rounded-full shadow-lg shadow-blue-900/60">
@@ -142,7 +127,6 @@
           </div>
         </div>
 
-        <!-- brief suggestion + SHORT convo -->
         <div class="mt-6 bg-slate-950/75 text-slate-50 px-6 py-5 text-sm md:text-[15px] space-y-3">
           <div class="text-xs uppercase tracking-wide text-slate-400">
             Live suggestion from whis.ai
@@ -155,7 +139,6 @@
     </div>
   </section>
 
-  <!-- HOW IT WORKS -->
   <section class="bg-white py-16 md:py-20">
     <div class="max-w-6xl mx-auto px-6">
       <h2 class="text-2xl md:text-3xl font-semibold text-center mb-10">
@@ -163,7 +146,6 @@
       </h2>
 
       <div class="grid md:grid-cols-3 gap-10">
-        <!-- Step 1 -->
         <div>
           <div class="text-4xl font-semibold text-slate-900 mb-2">1</div>
           <h3 class="text-lg font-semibold mb-1">Start before your meeting</h3>
@@ -172,7 +154,6 @@
             watching the active meeting window.
           </p>
         </div>
-        <!-- Step 2 -->
         <div>
           <div class="text-4xl font-semibold text-slate-900 mb-2">2</div>
           <h3 class="text-lg font-semibold mb-1">Ask in the moment</h3>
@@ -181,7 +162,6 @@
             questions in real time.
           </p>
         </div>
-        <!-- Step 3 -->
         <div>
           <div class="text-4xl font-semibold text-slate-900 mb-2">3</div>
           <h3 class="text-lg font-semibold mb-1">See answers only you can see</h3>
@@ -194,7 +174,6 @@
     </div>
   </section>
 
-  <!-- LOGIN MODAL -->
   <div id="loginModal" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-50 hidden items-center justify-center p-4">
     <div class="bg-white rounded-2xl shadow-2xl p-8 max-w-sm w-full text-center relative">
       <button onclick="closeLoginModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-600">
@@ -206,7 +185,6 @@
     </div>
   </div>
 
-  <!-- DOWNLOAD MODAL (NEW) -->
   <div id="downloadModal" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-50 hidden items-center justify-center p-4 transition-opacity opacity-0">
     <div class="bg-white rounded-3xl shadow-2xl p-8 max-w-md w-full text-center transform scale-95 transition-transform relative">
       <button onclick="closeDownloadModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-600">
@@ -217,8 +195,9 @@
       </div>
       <h2 class="text-2xl font-bold mb-2">Download whis.ai</h2>
       <p class="text-slate-500 mb-8 text-sm">Choose your platform to start your free trial.</p>
+      
       <div class="space-y-3">
-        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/whis.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-apple text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
@@ -228,7 +207,8 @@
           </div>
           <i class="fa-solid fa-arrow-down text-slate-400 group-hover:text-whis-blue"></i>
         </a>
-        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/whis-setup.exe" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-windows text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
@@ -239,13 +219,13 @@
           <i class="fa-solid fa-arrow-down text-slate-400 group-hover:text-whis-blue"></i>
         </a>
       </div>
+
     </div>
   </div>
 
-  <!-- Scripts -->
   <script>
     const BACKEND_URL = "https://whis-backend.onrender.com";
-    const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
+    const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com";
 
     const loginModal = document.getElementById('loginModal');
     const downloadModal = document.getElementById('downloadModal');
