Update navigation and download links in pricing.html

--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,6 @@
 
 <body class="bg-whis-bg text-slate-900 antialiased">
 
-  <!-- NAVBAR -->
   <nav class="w-full flex items-center justify-between px-6 md:px-12 py-4">
     <a href="index.html" class="flex items-center gap-2">
       <div class="w-9 h-9 rounded-2xl bg-slate-900 flex items-center justify-center shadow-lg shadow-slate-900/40">
@@ -28,7 +27,7 @@
       <a href="pricing.html" class="hover:text-slate-900 font-semibold text-slate-900">Pricing</a>
       <a href="enterprise.html" class="hover:text-slate-900">Enterprise</a>
       <a href="careers.html" class="hover:text-slate-900">Careers</a>
-      <a href="blog.html" class="hover:text-slate-900">Blog</a>
+      <a href="contact.html" class="hover:text-slate-900">Contact Us</a>
     </div>
 
     <button onclick="openDownloadModal()" class="bg-whis-blue text-white text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow hover:shadow-md hover:bg-blue-700 transition">
@@ -36,7 +35,6 @@
     </button>
   </nav>
 
-  <!-- MAIN -->
   <main class="mt-14 md:mt-20 flex flex-col items-center px-4">
 
     <h1 class="text-3xl md:text-5xl font-extrabold flex flex-wrap justify-center items-center gap-3 text-center">
@@ -51,7 +49,6 @@
       Choose a plan that fits how you work. Upgrade only when you need unlimited notes, prompts, and undetectable mode.
     </p>
 
-    <!-- Billing toggle -->
     <div class="mt-8 flex items-center gap-4 text-sm md:text-base text-slate-700">
       <span id="labelMonthly" class="font-semibold">Monthly</span>
       <label class="relative inline-flex items-center cursor-pointer">
@@ -62,10 +59,8 @@
       <span id="labelAnnual" class="text-slate-500">Annually</span>
     </div>
 
-    <!-- Pricing cards -->
     <section class="mt-14 md:mt-16 w-full max-w-6xl grid gap-6 md:gap-8 md:grid-cols-3 px-2 md:px-0">
 
-      <!-- Starter -->
       <article class="bg-white rounded-3xl shadow-sm hover:shadow-md transition p-7 md:p-8 flex flex-col">
         <h2 class="text-lg md:text-xl font-bold">Starter</h2>
         <p class="mt-1 text-slate-500 text-sm">All essential features.</p>
@@ -82,7 +77,6 @@
         </ul>
       </article>
 
-      <!-- Pro -->
       <article class="bg-white rounded-3xl shadow-md border border-whis-blue/40 p-7 md:p-8 flex flex-col relative overflow-hidden">
         <div class="absolute top-4 right-4 bg-whis-blue text-white text-xs font-semibold px-3 py-1 rounded-full">Most popular</div>
         <h2 class="text-lg md:text-xl font-bold">Pro</h2>
@@ -97,7 +91,6 @@
         </button>
       </article>
 
-      <!-- Pro+ -->
       <article class="bg-white rounded-3xl shadow-sm hover:shadow-md transition p-7 md:p-8 flex flex-col">
         <h2 class="text-lg md:text-xl font-bold">Pro + Undetectability</h2>
         <p class="mt-1 text-slate-500 text-sm">Hidden during screen share.</p>
@@ -114,7 +107,6 @@
     </section>
   </main>
 
-  <!-- DOWNLOAD MODAL -->
   <div id="downloadModal" class="fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-50 hidden items-center justify-center p-4 transition-opacity opacity-0">
     <div class="bg-white rounded-3xl shadow-2xl p-8 max-w-md w-full text-center transform scale-95 transition-transform relative">
       
@@ -130,8 +122,7 @@
       <p class="text-slate-500 mb-8 text-sm">Choose your platform to start.</p>
 
       <div class="space-y-3">
-        <!-- macOS Download -->
-        <a href="path/to/whis-mac.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/whis.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-apple text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
@@ -142,8 +133,7 @@
           <i class="fa-solid fa-arrow-down text-slate-400 group-hover:text-whis-blue"></i>
         </a>
 
-        <!-- Windows Download -->
-        <a href="path/to/whis-win.exe" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/whis-setup.exe" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-windows text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
