--- a/careers.html
+++ b/careers.html
@@ -20,7 +20,6 @@
 </head>
 <body class="bg-whis-bg text-slate-900 antialiased">
 
-  <!-- NAV -->
   <nav class="w-full flex items-center justify-between px-6 md:px-12 py-4 bg-whis-bg">
     <a href="index.html" class="flex items-center gap-2">
       <div
@@ -39,7 +38,7 @@
       <a href="pricing.html" class="hover:text-slate-900">Pricing</a>
       <a href="enterprise.html" class="hover:text-slate-900">Enterprise</a>
       <a href="careers.html" class="hover:text-slate-900 font-semibold text-slate-900">Careers</a>
-      <a href="blog.html" class="hover:text-slate-900">Blog</a>
+      <a href="contact.html" class="hover:text-slate-900">Contact Us</a>
     </div>
 
     <a href="pricing.html" class="bg-whis-blue text-white text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow hover:bg-blue-700 transition">
@@ -47,7 +46,6 @@
     </a>
   </nav>
 
-  <!-- HERO -->
   <section class="py-16 md:py-24 bg-gradient-to-b from-white to-whis-bg">
     <div class="max-w-5xl mx-auto px-6 text-center md:text-left">
       <h1 class="text-3xl md:text-5xl font-semibold leading-tight">
@@ -60,7 +58,6 @@
     </div>
   </section>
 
-  <!-- OPEN ROLES (PLACEHOLDER) -->
   <section class="py-14">
     <div class="max-w-5xl mx-auto px-6">
       <h2 class="text-xl md:text-2xl font-semibold mb-4">Open roles</h2>
