--- a/enterprise.html
+++ b/enterprise.html
@@ -20,7 +20,6 @@
 </head>
 <body class="bg-whis-bg text-slate-900 antialiased">
 
-  <!-- NAV -->
   <nav class="w-full flex items-center justify-between px-6 md:px-12 py-4 bg-whis-bg">
     <a href="index.html" class="flex items-center gap-2">
       <div
@@ -39,15 +38,14 @@
       <a href="pricing.html" class="hover:text-slate-900">Pricing</a>
       <a href="enterprise.html" class="hover:text-slate-900 font-semibold text-slate-900">Enterprise</a>
       <a href="careers.html" class="hover:text-slate-900">Careers</a>
-      <a href="blog.html" class="hover:text-slate-900">Blog</a>
+      <a href="contact.html" class="hover:text-slate-900">Contact Us</a>
     </div>
 
-    <a href="#contact" class="bg-whis-blue text-white text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow hover:bg-blue-700 transition">
+    <a href="contact.html" class="bg-whis-blue text-white text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow hover:bg-blue-700 transition">
       Talk to sales
     </a>
   </nav>
 
-  <!-- HERO -->
   <section class="py-16 md:py-24 bg-gradient-to-b from-white to-whis-bg">
     <div class="max-w-5xl mx-auto px-6 text-center md:text-left">
       <h1 class="text-3xl md:text-5xl font-semibold leading-tight">
@@ -60,7 +58,7 @@
       </p>
       <div class="mt-8 flex flex-col md:flex-row gap-3 md:gap-4 md:items-center">
         <a
-          href="#contact"
+          href="contact.html"
           class="inline-flex justify-center bg-whis-blue text-white px-6 py-2.5 rounded-xl text-sm font-semibold shadow hover:bg-blue-700 transition">
           Book an enterprise demo
         </a>
@@ -71,7 +69,6 @@
     </div>
   </section>
 
-  <!-- VALUE BULLETS -->
   <section class="py-14">
     <div class="max-w-5xl mx-auto px-6 grid md:grid-cols-3 gap-8 text-sm">
       <div>
@@ -98,7 +95,6 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
   <section id="contact" class="py-14 bg-white border-t border-slate-200">
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h2 class="text-2xl md:text-3xl font-semibold mb-3">Enterprise contact</h2>
