--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <script>
     const BACKEND_URL = "https://whis-backend.onrender.com";
-    const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com";
+    const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
 
     const loginModal = document.getElementById('loginModal');
     const downloadModal = document.getElementById('downloadModal');
