--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <i class="fa-solid fa-arrow-down text-slate-400 group-hover:text-whis-blue"></i>
         </a>
 
-        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
+        <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.windows/Whis.Setup.1.0.0.exe" class="flex items-center justify-between w-full px-6 py-4 border border-slate-200 rounded-2xl hover:border-whis-blue hover:bg-blue-50 transition group text-left">
           <div class="flex items-center gap-4">
             <i class="fa-brands fa-windows text-2xl text-slate-800 group-hover:text-whis-blue"></i>
             <div>
