Update support email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
       <div class="bg-slate-50 rounded-2xl p-6 border border-slate-100 mb-8">
         <p class="text-sm text-slate-500 uppercase tracking-wider font-semibold mb-2">Support Email</p>
         <a href="mailto:syedwaseemfahad007@gmail.com" class="text-xl md:text-2xl font-bold text-whis-blue hover:underline break-all">
-          syedwaseemfahad007@gmail.com
+          support@whis-ai.com
         </a>
       </div>
 
