--- a/pricing.html
+++ b/pricing.html
@@ -46,7 +46,7 @@
     </h1>
 
     <p class="mt-5 max-w-xl text-center text-base md:text-lg text-slate-600">
-      Choose a plan that fits how you work. Upgrade only when you need unlimited notes, prompts, and undetectable mode.
+      Choose a plan that fits how you work. Upgrade only when you need unlimited transcription hours and undetectable mode.
     </p>
 
     <div class="mt-8 flex items-center gap-4 text-sm md:text-base text-slate-700">
@@ -63,7 +63,7 @@
 
       <article class="bg-white rounded-3xl shadow-sm hover:shadow-md transition p-7 md:p-8 flex flex-col">
         <h2 class="text-lg md:text-xl font-bold">Starter</h2>
-        <p class="mt-1 text-slate-500 text-sm">All essential features.</p>
+        <p class="mt-1 text-slate-500 text-sm">Essential features.</p>
         <div class="mt-5 text-4xl font-extrabold">Free</div>
         
         <button onclick="openDownloadModal()" class="mt-6 bg-whis-blue text-white py-2.5 rounded-xl text-sm font-semibold hover:bg-blue-700 transition">
@@ -71,16 +71,16 @@
         </button>
 
         <ul class="mt-6 space-y-2 text-sm text-slate-700">
-          <li>✔ Limited AI responses</li>
-          <li>✔ Limited meeting notes</li>
-          <li>✔ Custom instructions</li>
+          <li>✔ Live Meeting Transcription</li>
+          <li>✔ Screenshot Analysis</li>
+          <li>✔ Text Input Context</li>
         </ul>
       </article>
 
       <article class="bg-white rounded-3xl shadow-md border border-whis-blue/40 p-7 md:p-8 flex flex-col relative overflow-hidden">
         <div class="absolute top-4 right-4 bg-whis-blue text-white text-xs font-semibold px-3 py-1 rounded-full">Most popular</div>
         <h2 class="text-lg md:text-xl font-bold">Pro</h2>
-        <p class="mt-1 text-slate-500 text-sm">Unlimited access.</p>
+        <p class="mt-1 text-slate-500 text-sm">Unlimited transcription.</p>
         <div class="mt-5 flex items-baseline gap-1">
           <span id="proPrice" class="text-4xl font-extrabold">₹399</span>
           <span class="text-slate-500 text-sm">/ month</span>
