Update annual pricing discount and feature list

--- a/pricing.html
+++ b/pricing.html
@@ -56,7 +56,7 @@
         <div class="w-14 h-7 bg-slate-200 rounded-full peer-checked:bg-whis-blue transition-colors duration-300"></div>
         <div class="absolute left-1 top-1 w-5 h-5 bg-white rounded-full shadow-md peer-checked:translate-x-7 transition-transform duration-300"></div>
       </label>
-      <span id="labelAnnual" class="text-slate-500 transition-colors duration-200">Annually <span class="text-xs text-emerald-600 font-bold ml-1">(-20%)</span></span>
+      <span id="labelAnnual" class="text-slate-500 transition-colors duration-200">Annually <span class="text-xs text-emerald-600 font-bold ml-1">(-45%)</span></span>
     </div>
 
     <section class="mt-12 md:mt-16 w-full max-w-6xl grid gap-6 md:gap-8 md:grid-cols-3 px-2 md:px-0 items-start">
@@ -118,14 +118,6 @@
                 <i class="fa-solid fa-bolt text-whis-blue mt-0.5"></i>
                 <span>2x Faster Processing Speed</span>
             </li>
-            <li class="flex items-start gap-3">
-                <i class="fa-solid fa-clock-rotate-left text-whis-blue mt-0.5"></i>
-                <span>Unlimited Conversation History</span>
-            </li>
-             <li class="flex items-start gap-3">
-                <i class="fa-solid fa-file-export text-whis-blue mt-0.5"></i>
-                <span>Export to PDF & Markdown</span>
-            </li>
              <li class="flex items-start gap-3">
                 <i class="fa-solid fa-headset text-whis-blue mt-0.5"></i>
                 <span>Priority Email Support</span>
@@ -164,19 +156,12 @@
                 </li>
                 <li class="flex items-start gap-3">
                     <i class="fa-solid fa-check text-purple-400 mt-0.5"></i>
-                    <span>Works with <strong class="text-white">Zoom, Teams, Meet & Slack</strong></span>
+                    <span>Works with <strong class="text-white">Zoom, Teams, Meet & Anything</strong></span>
                 </li>
                  <li class="flex items-start gap-3">
                     <i class="fa-solid fa-check text-purple-400 mt-0.5"></i>
                     <span>Ghost Window (Only visible to you)</span>
                 </li>
-                <li class="flex items-start gap-3">
-                    <i class="fa-solid fa-check text-purple-400 mt-0.5"></i>
-                    <span>System-Audio Isolation</span>
-                </li>
-                <li class="flex items-start gap-3">
-                    <i class="fa-solid fa-check text-purple-400 mt-0.5"></i>
-                    <span>No Admin Logs/Traces</span>
                 </li>
             </ul>
         </div>
