Revamp contact page with new layout and styles
Updated the contact page layout and styles, including a new navigation bar and form for user inquiries.

--- a/contact.html
+++ b/contact.html
@@ -2,77 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>whis.ai – Contact Us</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact - whis.ai</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            'whis-bg': '#eef2f7',
-            'whis-blue': '#2563eb',
-          }
-        }
-      }
-    }
-  </script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <script>tailwind.config={theme:{extend:{colors:{'whis-bg':'#f8fafc','whis-dark':'#0f172a'}}}}</script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <style>.glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(12px); }</style>
 </head>
-<body class="bg-whis-bg text-slate-900 antialiased flex flex-col min-h-screen">
-
-  <nav class="w-full flex items-center justify-between px-6 md:px-12 py-4 bg-whis-bg">
-    <a href="index.html" class="flex items-center gap-2">
-      <div class="w-9 h-9 rounded-2xl bg-slate-900 flex items-center justify-center shadow-lg shadow-slate-900/40">
-        <div class="w-7 h-7 rounded-xl bg-gradient-to-tr from-whis-blue to-sky-300 flex items-center justify-center border border-sky-200/60">
-          <span class="text-[11px] font-semibold tracking-[0.18em] uppercase">wh</span>
-        </div>
+<body class="bg-whis-bg text-slate-900 antialiased font-sans">
+  <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/10">
+      <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+          <a href="index.html" class="flex items-center gap-2 group"><span class="text-xl font-bold text-white">whis.ai</span></a>
+           <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300"><a href="index.html" class="hover:text-white">Home</a><a href="pricing.html" class="hover:text-white">Pricing</a></div>
       </div>
-      <span class="text-xl md:text-2xl font-semibold tracking-tight">whis.ai</span>
-    </a>
-
-    <div class="hidden md:flex items-center gap-6 text-sm text-slate-600">
-      <a href="pricing.html" class="hover:text-slate-900">Pricing</a>
-      <a href="enterprise.html" class="hover:text-slate-900">Enterprise</a>
-      <a href="careers.html" class="hover:text-slate-900">Careers</a>
-      <a href="contact.html" class="hover:text-slate-900 font-semibold text-slate-900">Contact Us</a>
-    </div>
-
-    <a href="index.html" class="bg-whis-blue text-white text-sm md:text-base px-4 md:px-5 py-2 rounded-xl shadow hover:bg-blue-700 transition">
-      Get App
-    </a>
   </nav>
-
-  <main class="flex-grow flex flex-col items-center justify-center px-6 py-12">
-    
-    <div class="max-w-2xl w-full bg-white rounded-3xl shadow-xl border border-slate-200 p-8 md:p-12 text-center">
-      <div class="w-16 h-16 bg-blue-50 rounded-2xl flex items-center justify-center mx-auto mb-6 text-whis-blue text-2xl">
-        <i class="fa-solid fa-envelope"></i>
+  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center"><h1 class="text-4xl font-bold mb-4">Contact Us</h1><p class="text-slate-400">We're here to help.</p></section>
+  <section class="max-w-3xl mx-auto py-16 px-6">
+      <div class="bg-white rounded-3xl p-8 shadow-sm border border-slate-200">
+          <form class="space-y-6">
+              <div><label class="block text-sm font-bold mb-2">Email</label><input type="email" class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50" placeholder="you@company.com"></div>
+              <div><label class="block text-sm font-bold mb-2">Message</label><textarea class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50 h-32"></textarea></div>
+              <button class="bg-slate-900 text-white px-6 py-3 rounded-xl font-bold w-full">Send Message</button>
+          </form>
       </div>
-
-      <h1 class="text-3xl md:text-4xl font-bold mb-4">Contact Us</h1>
-      <p class="text-slate-600 mb-8">
-        Have questions about subscriptions, enterprise plans, or technical support? Reach out to us directly.
-      </p>
-
-      <div class="bg-slate-50 rounded-2xl p-6 border border-slate-100 mb-8">
-        <p class="text-sm text-slate-500 uppercase tracking-wider font-semibold mb-2">Support Email</p>
-        <a href="mailto:syedwaseemfahad007@gmail.com" class="text-xl md:text-2xl font-bold text-whis-blue hover:underline break-all">
-          support@whis-ai.com
-        </a>
-      </div>
-
-      <div class="border-t border-slate-100 pt-6 mt-6">
-        <p class="text-xs text-slate-400 uppercase tracking-wide mb-1">Merchant Legal Entity Name</p>
-        <p class="text-sm font-bold text-slate-800 tracking-wide">WASEEM FAHAD SYED</p>
-      </div>
-    </div>
-
-  </main>
-
-  <footer class="py-6 text-center text-slate-400 text-sm">
-    &copy; 2025 whis.ai
-  </footer>
-
+  </section>
+  <footer class="bg-slate-900 text-slate-400 py-12 text-center border-t border-slate-800">&copy; 2025 Whis AI.</footer>
 </body>
 </html>
