Refactor HTML structure for better readability

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,16 @@
   <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/10">
       <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
           <a href="index.html" class="flex items-center gap-2 group"><span class="text-xl font-bold text-white">whis.ai</span></a>
-           <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300"><a href="index.html" class="hover:text-white">Home</a><a href="pricing.html" class="hover:text-white">Pricing</a></div>
+          <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300">
+             <a href="index.html" class="hover:text-white">Home</a>
+             <a href="pricing.html" class="hover:text-white">Pricing</a>
+          </div>
       </div>
   </nav>
-  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center"><h1 class="text-4xl font-bold mb-4">Contact Us</h1><p class="text-slate-400">We're here to help.</p></section>
+  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center">
+      <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
+      <p class="text-slate-400">We're here to help.</p>
+  </section>
   <section class="max-w-3xl mx-auto py-16 px-6">
       <div class="bg-white rounded-3xl p-8 shadow-sm border border-slate-200">
           <form class="space-y-6">
