--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     .scrollbar-hide::-webkit-scrollbar { display: none; }
     .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
     
-    /* Smooth fade in for video */
+    /* Video Transition */
     #heroVideo {
-      transition: opacity 1.5s ease-in-out;
-      opacity: 0; /* Starts hidden to show poster */
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
     }
     #heroVideo.loaded {
-      opacity: 0.9; /* Fades in to target opacity */
+      opacity: 1;
     }
   </style>
 </head>
@@ -155,11 +155,11 @@
              <video 
                 id="heroVideo"
                 class="w-full h-full object-cover" 
-                poster="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=2576&auto=format&fit=crop"
+                poster="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=2664&auto=format&fit=crop"
                 muted 
                 loop 
                 playsinline
-                preload="none" 
+                preload="none"
                 >
                 </video>
             
@@ -528,16 +528,17 @@
     }
 
     // --- LAZY LOAD VIDEO SCRIPT ---
-    // This ensures the rest of the page loads first, fixing the "hang"
+    // This fixes the "hanging" by waiting for the full page load
     window.addEventListener('load', () => {
       setTimeout(() => {
         const v = document.getElementById('heroVideo');
         if(v) {
-          v.src = "assets/whis-meeting-demo.mp4"; // Set source only after page load
+          v.src = "assets/whis-meeting-demo.mp4"; 
           v.load();
-          v.classList.add('loaded');
+          // Fade in effect
+          v.oncanplay = () => { v.classList.add('loaded'); v.play(); };
         }
-      }, 100); // Tiny delay to let UI breathe
+      }, 200); 
     });
   </script>
 </body>
