--- a/pricing.html
+++ b/pricing.html
@@ -19,10 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
-  <style>
-    .glass-nav { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }
-    .scrollbar-hide::-webkit-scrollbar { display: none; }
-  </style>
+  <style>.glass-nav { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }.scrollbar-hide::-webkit-scrollbar { display: none; }</style>
 </head>
 <body class="bg-whis-bg text-slate-900 antialiased font-sans">
 
@@ -61,7 +58,7 @@
 
     <div class="inline-flex items-center gap-4 bg-white/5 border border-white/10 p-1.5 rounded-full animate-fade-in-up delay-200 backdrop-blur-md">
       <button id="btnMonthly" class="px-6 py-2 rounded-full text-sm font-semibold bg-blue-600 text-white shadow-lg transition-all" onclick="setCycle('monthly')">Monthly</button>
-      <button id="btnAnnual" class="px-6 py-2 rounded-full text-sm font-semibold text-slate-400 hover:text-white transition-all" onclick="setCycle('annual')">Yearly <span class="text-emerald-400 text-xs ml-1">-20%</span></button>
+      <button id="btnAnnual" class="px-6 py-2 rounded-full text-sm font-semibold text-slate-400 hover:text-white transition-all" onclick="setCycle('annual')">Yearly <span class="text-emerald-400 text-xs ml-1 font-bold">SAVE 50%</span></button>
     </div>
   </section>
 
@@ -113,72 +110,62 @@
   </section>
 
   <div id="loginModal" class="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-50 hidden items-center justify-center p-4"><div class="bg-white rounded-3xl shadow-2xl p-8 max-w-sm w-full text-center relative"><button onclick="closeLoginModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-600"><i class="fa-solid fa-times"></i></button><h3 class="text-xl font-bold mb-6">Sign in</h3><div id="googleBtnContainer" class="flex justify-center"></div></div></div>
-
-  <div id="profileModal" class="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-50 hidden items-center justify-center p-4"><div class="bg-white rounded-3xl shadow-2xl max-w-md w-full relative overflow-hidden"><div class="bg-slate-900 p-6 text-white relative"><button onclick="closeProfileModal()" class="absolute top-4 right-4 text-slate-400 hover:text-white"><i class="fa-solid fa-times text-lg"></i></button><div class="flex items-center gap-4"><img id="modalUserAvatar" src="" class="w-16 h-16 rounded-full border-2 border-blue-500 bg-slate-800" /><div><h2 id="modalUserName" class="text-xl font-bold"></h2><p id="modalUserEmail" class="text-sm text-slate-400"></p></div></div></div><div class="p-6 space-y-6"><div class="bg-blue-50 border border-blue-100 rounded-2xl p-5"><div class="flex justify-between items-start mb-2"><div><p class="text-xs text-blue-600 font-bold uppercase tracking-wider">Current Plan</p><h3 id="modalPlanName" class="text-xl font-bold text-slate-900 mt-1">...</h3></div><div id="modalPlanBadge"></div></div><div class="mt-4 pt-4 border-t border-blue-100 flex justify-between text-sm"><span id="modalExpiryLabel">Validity</span><span id="modalExpiryDate" class="font-bold">--</span></div></div><div id="freeUsageSection" class="hidden"><div class="flex justify-between text-xs font-semibold mb-1"><span>Daily Limit</span><span id="usageText">0/5</span></div><div class="w-full bg-slate-100 rounded-full h-2.5"><div id="usageBar" class="bg-blue-500 h-2.5 rounded-full" style="width: 0%"></div></div></div><div><h4 class="font-bold text-slate-900 mb-3">Order History</h4><div class="max-h-40 overflow-y-auto scrollbar-hide border border-slate-100 rounded-xl"><table class="w-full text-sm text-left"><thead class="bg-slate-50 text-slate-500"><tr><th class="px-4 py-2">Date</th><th class="px-4 py-2">Plan</th><th class="px-4 py-2">Amt</th></tr></thead><tbody id="orderHistoryBody"></tbody></table><div id="noOrdersMsg" class="hidden p-4 text-center text-xs text-slate-400">No history</div></div></div><div class="pt-2 flex gap-3"><button onclick="closeProfileModal()" class="flex-1 bg-slate-100 py-2.5 rounded-xl text-sm font-bold">Close</button><button onclick="logout()" class="px-4 py-2.5 rounded-xl border border-slate-200 text-red-500 text-sm font-bold">Logout</button></div></div></div></div>
-
   <div id="downloadModal" class="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-50 hidden items-center justify-center p-4"><div class="bg-white rounded-3xl shadow-2xl p-8 max-w-md w-full text-center relative"><button onclick="closeDownloadModal()" class="absolute top-4 right-4 text-slate-400"><i class="fa-solid fa-times"></i></button><h2 class="text-2xl font-bold mb-6">Download</h2><div class="space-y-3"><a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v1.0.0/Whis-1.0.0-arm64.dmg" class="block w-full px-6 py-4 border rounded-2xl hover:border-blue-500 hover:bg-blue-50 font-bold">Download for Mac</a><a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.windows/Whis.Setup.1.0.0.exe" class="block w-full px-6 py-4 border rounded-2xl hover:border-blue-500 hover:bg-blue-50 font-bold">Download for Windows</a></div></div></div>
+  <div id="profileModal" class="fixed inset-0 bg-slate-900/80 hidden items-center justify-center p-4"><div class="bg-white rounded-3xl max-w-md w-full overflow-hidden"><div class="bg-slate-900 p-6 text-white relative"><button onclick="closeProfileModal()" class="absolute top-4 right-4"><i class="fa-solid fa-times"></i></button><div class="flex items-center gap-4"><img id="modalUserAvatar" class="w-16 h-16 rounded-full" /><div><h2 id="modalUserName" class="text-xl font-bold"></h2><p id="modalUserEmail"></p></div></div></div><div class="p-6 space-y-6"><div class="bg-blue-50 border border-blue-100 rounded-2xl p-5"><div class="flex justify-between"><div><p class="text-xs font-bold">Current Plan</p><h3 id="modalPlanName" class="text-xl font-bold"></h3></div><div id="modalPlanBadge"></div></div><div class="mt-4 pt-4 border-t border-blue-100 flex justify-between"><span id="modalExpiryLabel">Validity</span><span id="modalExpiryDate" class="font-bold"></span></div></div><div id="freeUsageSection" class="hidden"><div class="flex justify-between"><span>Limit</span><span id="usageText"></span></div><div class="bg-slate-100 h-2 rounded-full"><div id="usageBar" class="bg-blue-500 h-2 rounded-full"></div></div></div><div><h4 class="font-bold mb-2">History</h4><tbody id="orderHistoryBody"></tbody><div id="noOrdersMsg"></div></div></div></div></div>
 
   <script>
     const BACKEND_URL = "https://whis-backend.onrender.com";
     const GOOGLE_CLIENT_ID = "91011354786-0giqfdd547vj6ojkk26qdj4jucl5v07p.apps.googleusercontent.com";
-    let currentCycle = 'monthly';
-    let currentUser = null;
+    let currentCycle = 'monthly'; let currentUser = null;
 
-    // --- 1. UI TOGGLE ---
-    function setCycle(cycle) {
-        currentCycle = cycle;
+    function setCycle(c) { 
+        currentCycle = c; 
         const btnM = document.getElementById('btnMonthly');
         const btnA = document.getElementById('btnAnnual');
-        const pPro = document.getElementById('pricePro');
-        const pStealth = document.getElementById('priceStealth');
-
-        if(cycle === 'monthly') {
-            btnM.classList.add('bg-blue-600', 'text-white', 'shadow-lg'); btnM.classList.remove('text-slate-400');
-            btnA.classList.remove('bg-blue-600', 'text-white', 'shadow-lg'); btnA.classList.add('text-slate-400');
-            pPro.innerText = "₹799"; pStealth.innerText = "₹1999";
+        
+        if (c === 'monthly') {
+            btnM.className = "px-6 py-2 rounded-full text-sm font-semibold bg-blue-600 text-white shadow-lg transition-all";
+            btnA.className = "px-6 py-2 rounded-full text-sm font-semibold text-slate-400 hover:text-white transition-all";
+            document.getElementById('pricePro').innerText = '₹799'; 
+            document.getElementById('priceStealth').innerText = '₹1999';
         } else {
-            btnA.classList.add('bg-blue-600', 'text-white', 'shadow-lg'); btnA.classList.remove('text-slate-400');
-            btnM.classList.remove('bg-blue-600', 'text-white', 'shadow-lg'); btnM.classList.add('text-slate-400');
-            pPro.innerText = "₹399"; pStealth.innerText = "₹999";
+            btnA.className = "px-6 py-2 rounded-full text-sm font-semibold bg-blue-600 text-white shadow-lg transition-all";
+            btnM.className = "px-6 py-2 rounded-full text-sm font-semibold text-slate-400 hover:text-white transition-all";
+            document.getElementById('pricePro').innerText = '₹399'; 
+            document.getElementById('priceStealth').innerText = '₹999';
         }
     }
 
-    // --- 2. PAYMENT INITIATION ---
     async function initiatePayment(tier) {
-        if(!currentUser) { alert("Please sign in first to subscribe."); openLoginModal(); return; }
-        const btnText = event.target.innerText; event.target.innerText = "Processing...";
+        if(!currentUser) { alert("Please sign in first."); openLoginModal(); return; }
+        const btn = event.target; const txt = btn.innerText; btn.innerText = "Processing...";
         try {
-            const res = await fetch(`${BACKEND_URL}/api/payment/create-order`, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ googleId: currentUser.googleId, tier: tier, cycle: currentCycle }) });
+            const res = await fetch(`${BACKEND_URL}/api/payment/create-order`, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ googleId: currentUser.googleId, tier, cycle: currentCycle }) });
             const data = await res.json();
-            if(data.payment_session_id) {
-                const cashfree = Cashfree({ mode: "sandbox" });
-                cashfree.checkout({ paymentSessionId: data.payment_session_id });
-            } else { alert("Order creation failed: " + (data.error || "Unknown error")); }
-        } catch(e) { console.error(e); alert("Payment server offline"); }
-        event.target.innerText = btnText;
+            if(data.payment_session_id) { const cf = Cashfree({ mode: "sandbox" }); cf.checkout({ paymentSessionId: data.payment_session_id }); }
+            else { alert("Error: " + data.error); }
+        } catch(e) { alert("Server Error"); }
+        btn.innerText = txt;
     }
 
-    // --- 3. SHARED MODAL LOGIC (Minified) ---
+    // Reuse Logic
     const loginModal=document.getElementById('loginModal'),profileModal=document.getElementById('profileModal'),downloadModal=document.getElementById('downloadModal');
-    function openLoginModal(){ loginModal.classList.remove('hidden'); loginModal.classList.add('flex'); if(window.google){ google.accounts.id.initialize({ client_id: GOOGLE_CLIENT_ID, callback: handleGoogleRes }); google.accounts.id.renderButton(document.getElementById("googleBtnContainer"), {theme:"outline", size:"large"}); }}
+    function openLoginModal(){ loginModal.classList.remove('hidden'); loginModal.classList.add('flex'); if(window.google) { google.accounts.id.initialize({ client_id: GOOGLE_CLIENT_ID, callback: handleGoogleRes }); google.accounts.id.renderButton(document.getElementById("googleBtnContainer"), {theme:"outline", size:"large"}); }}
     function closeLoginModal(){ loginModal.classList.add('hidden'); loginModal.classList.remove('flex'); }
     function openProfileModal(){ if(currentUser) fetchFullData(currentUser.googleId); profileModal.classList.remove('hidden'); profileModal.classList.add('flex'); }
     function closeProfileModal(){ profileModal.classList.add('hidden'); profileModal.classList.remove('flex'); }
     function openDownloadModal(){ downloadModal.classList.remove('hidden'); downloadModal.classList.add('flex'); }
     function closeDownloadModal(){ downloadModal.classList.add('hidden'); downloadModal.classList.remove('flex'); }
-    function logout(){ localStorage.removeItem('whisUser'); location.reload(); }
-    async function handleGoogleRes(res){ const r=await fetch(`${BACKEND_URL}/api/auth/google`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({token:res.credential})}); const d=await r.json(); if(d.success){ localStorage.setItem('whisUser',JSON.stringify(d.user)); currentUser=d.user; updateUI(); closeLoginModal(); } }
-    function updateUI(){ if(!currentUser) return; document.getElementById('signInBtn').classList.add('hidden'); document.getElementById('userProfileTrigger').classList.remove('hidden'); document.getElementById('userProfileTrigger').classList.add('flex'); document.getElementById('navUserName').innerText = currentUser.name.split(' ')[0]; document.getElementById('navUserAvatar').src = currentUser.avatarUrl; fetchFullData(currentUser.googleId); }
-    async function fetchFullData(gid){
-        try {
-            const r=await fetch(`${BACKEND_URL}/api/user/status`,{headers:{'x-google-id':gid}});const d=await r.json();
-            const badge=document.getElementById('navPlanBadge'); if(d.active){ badge.innerText="● "+(d.tier==='pro_plus'?'Stealth':'Pro'); badge.className="text-[10px] text-emerald-400 font-bold"; } else { badge.innerText="● Free"; badge.className="text-[10px] text-slate-400"; }
-            document.getElementById('modalUserAvatar').src=currentUser.avatarUrl; document.getElementById('modalUserName').innerText=currentUser.name; document.getElementById('modalUserEmail').innerText=currentUser.email; document.getElementById('modalPlanName').innerText=d.tier==='pro_plus'?'Pro + Stealth':(d.tier==='pro'?'Pro Plan':'Starter Free');
-            const mb=document.getElementById('modalPlanBadge'); if(d.active){ mb.innerText="ACTIVE"; mb.className="px-3 py-1 rounded-full text-xs font-bold bg-emerald-50 text-emerald-600"; document.getElementById('modalExpiryDate').innerText=new Date(d.validUntil).toLocaleDateString(); document.getElementById('freeUsageSection').classList.add('hidden'); } else { mb.innerText="FREE"; mb.className="px-3 py-1 rounded-full text-xs font-bold bg-slate-100 text-slate-600"; document.getElementById('modalExpiryDate').innerText="Forever"; document.getElementById('freeUsageSection').classList.remove('hidden'); const u=d.freeUsage?.count||0; document.getElementById('usageBar').style.width=((u/5)*100)+"%"; document.getElementById('usageText').innerText=u+"/5"; }
-            const tbody=document.getElementById('orderHistoryBody'); tbody.innerHTML=""; if(d.orders && d.orders.length){ document.getElementById('noOrdersMsg').classList.add('hidden'); d.orders.forEach(o=>{ tbody.innerHTML+=`<tr><td class="px-4 py-2">${new Date(o.date).toLocaleDateString()}</td><td class="px-4 py-2">${o.tier==='pro_plus'?'Stealth':'Pro'}</td><td class="px-4 py-2">₹${o.amount}</td></tr>`; }); } else { document.getElementById('noOrdersMsg').classList.remove('hidden'); }
+    async function handleGoogleRes(res){ const r = await fetch(`${BACKEND_URL}/api/auth/google`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({token:res.credential})}); const d = await r.json(); if(d.success){ localStorage.setItem('whisUser',JSON.stringify(d.user)); currentUser=d.user; updateUI(); closeLoginModal(); } }
+    function updateUI(){ if(!currentUser)return; document.getElementById('signInBtn').classList.add('hidden'); document.getElementById('userProfileTrigger').classList.remove('hidden'); document.getElementById('userProfileTrigger').classList.add('flex'); document.getElementById('navUserName').innerText = currentUser.name.split(' ')[0]; document.getElementById('navUserAvatar').src = currentUser.avatarUrl; fetchFullData(currentUser.googleId); }
+    async function fetchFullData(gid){ 
+        try { const r=await fetch(`${BACKEND_URL}/api/user/status`,{headers:{'x-google-id':gid}});const d=await r.json();
+        document.getElementById('navPlanBadge').innerText="● "+(d.active?(d.tier==='pro_plus'?'Stealth':'Pro'):'Free'); document.getElementById('navPlanBadge').className=d.active?"text-[10px] text-emerald-400 font-bold":"text-[10px] text-slate-400";
+        document.getElementById('modalUserAvatar').src=currentUser.avatarUrl; document.getElementById('modalUserName').innerText=currentUser.name; document.getElementById('modalUserEmail').innerText=currentUser.email; document.getElementById('modalPlanName').innerText=d.tier==='pro_plus'?'Pro + Stealth':(d.tier==='pro'?'Pro Plan':'Starter Free');
+        if(d.active){document.getElementById('modalPlanBadge').innerText="ACTIVE";document.getElementById('modalPlanBadge').className="px-3 py-1 rounded-full text-xs font-bold bg-emerald-50 text-emerald-600";document.getElementById('modalExpiryDate').innerText=new Date(d.validUntil).toLocaleDateString();}else{document.getElementById('modalPlanBadge').innerText="FREE";document.getElementById('modalPlanBadge').className="px-3 py-1 rounded-full text-xs font-bold bg-slate-100 text-slate-600";document.getElementById('freeUsageSection').classList.remove('hidden');const u=d.freeUsage?.count||0;document.getElementById('usageBar').style.width=((u/5)*100)+"%";document.getElementById('usageText').innerText=u+"/5";}
         } catch(e){}
     }
-    const uStr=localStorage.getItem('whisUser'); if(uStr){ currentUser=JSON.parse(uStr); updateUI(); }
+    const uStr = localStorage.getItem('whisUser'); if(uStr) { currentUser=JSON.parse(uStr); updateUI(); }
   </script>
 </body>
 </html>
