--- a/contact.html
+++ b/contact.html
@@ -3,34 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact - whis.ai</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{colors:{'whis-bg':'#f8fafc','whis-dark':'#0f172a'}}}}</script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: { 'whis-dark': '#0f172a', 'whis-blue': '#3b82f6' },
+          fontFamily: { sans: ['Inter', 'sans-serif'] }
+        }
+      }
+    }
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>.glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(12px); }</style>
+  <style>
+    body { background-color: #0f172a; color: white; }
+    .glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(20px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    .glass-card { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); }
+  </style>
 </head>
-<body class="bg-whis-bg text-slate-900 antialiased font-sans">
-  <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/10">
-      <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-          <a href="index.html" class="flex items-center gap-2 group"><span class="text-xl font-bold text-white">whis.ai</span></a>
-          <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300">
-             <a href="index.html" class="hover:text-white">Home</a>
-             <a href="pricing.html" class="hover:text-white">Pricing</a>
+<body class="antialiased font-sans flex flex-col min-h-screen">
+
+  <nav class="fixed top-0 w-full z-50 glass-nav">
+    <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-lg bg-gradient-to-br from-blue-600 to-indigo-600 flex items-center justify-center shadow-lg"><span class="text-[10px] font-bold text-white tracking-widest">WH</span></div>
+        <span class="text-lg font-bold tracking-tight">whis.ai</span>
+      </a>
+      <div class="flex items-center gap-8 text-sm font-medium text-slate-300">
+         <a href="index.html" class="hover:text-white transition">Home</a>
+         <a href="pricing.html" class="hover:text-white transition">Pricing</a>
+      </div>
+    </div>
+  </nav>
+
+  <section class="flex-grow flex items-center justify-center pt-20 px-6">
+      <div class="max-w-2xl w-full text-center">
+          <div class="inline-block p-4 rounded-full bg-blue-500/10 mb-6"><i class="fa-regular fa-paper-plane text-3xl text-blue-400"></i></div>
+          <h1 class="text-4xl font-bold mb-4">Contact Support</h1>
+          <p class="text-slate-400 mb-10 text-lg">Need help with your account or have a technical question? <br>Our engineering team is ready to assist.</p>
+          
+          <div class="glass-card rounded-2xl p-8 md:p-12 mb-10">
+              <h2 class="text-xl font-semibold mb-2">Email Us Directly</h2>
+              <a href="mailto:support@whis-ai.com" class="text-3xl md:text-4xl font-bold text-blue-400 hover:text-blue-300 transition">support@whis-ai.com</a>
+              <p class="text-sm text-slate-500 mt-4">Typical response time: &lt; 24 hours</p>
+          </div>
+
+          <div class="text-sm text-slate-500">
+              <p class="mb-2">Operating Entity:</p>
+              <p class="font-semibold text-slate-300 uppercase tracking-wide">WASEEM FAHAD SYED</p>
           </div>
       </div>
-  </nav>
-  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center">
-      <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
-      <p class="text-slate-400">We're here to help.</p>
   </section>
-  <section class="max-w-3xl mx-auto py-16 px-6">
-      <div class="bg-white rounded-3xl p-8 shadow-sm border border-slate-200">
-          <form class="space-y-6">
-              <div><label class="block text-sm font-bold mb-2">Email</label><input type="email" class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50" placeholder="you@company.com"></div>
-              <div><label class="block text-sm font-bold mb-2">Message</label><textarea class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50 h-32"></textarea></div>
-              <button class="bg-slate-900 text-white px-6 py-3 rounded-xl font-bold w-full">Send Message</button>
-          </form>
-      </div>
-  </section>
-  <footer class="bg-slate-900 text-slate-400 py-12 text-center border-t border-slate-800">&copy; 2025 Whis AI.</footer>
+
+  <footer class="py-8 text-center text-slate-600 text-sm border-t border-white/5">
+    &copy; 2025 Whis AI. All rights reserved.
+  </footer>
+
 </body>
 </html>
